@@ -85,6 +85,10 @@ youyan:
 ## "0": 灰白背景
 background_image: 0
 
+## General Color Scheme | 主题配色方案
+## 可用值 Value: yilia
+jcolor_scheme: yilia
+
 highlight_style:
   #on: true
   inline_code: 1  # Value: 0 - 9 可选
