@@ -61,7 +61,7 @@ $ sudo pacman -S autossh
 下面在**B** 上做之前类似的事情，不同的是该隧道会由`autossh` 来维持：
 
 ```bash
-B $ autossh -p 22 -fM 6777 -NR 6766:b.localhost:22 usera@a.site
+B $ autossh -p 22 -M 6777 -NR 6766:b.localhost:22 usera@a.site
 ```
 
 `-M` 参数指定的端口用来监听隧道的状态，与端口转发无关。
@@ -97,7 +97,7 @@ A $ sudo systemctl restart sshd
 然后在**B** 上对之前用到的`autossh` 指令略加修改：
 
 ```bash
-B $ autossh -p 22 -fM 6777 -NR '*:6766:b.localhost:22' usera@a.site
+B $ autossh -p 22 -M 6777 -NR '*:6766:b.localhost:22' usera@a.site
 ```
 
 之后在**C** 上利用**A** 的6766 端口SSH 连接到**B**：
@@ -141,7 +141,7 @@ After=network.target
 [Service]
 User=autossh
 Type=simple
-ExecStart=/bin/autossh -p 22 -fM 6777 -NR '*:6766:b.localhost:22' usera@a.site -i /home/autossh/.ssh/id_rsa
+ExecStart=/bin/autossh -p 22 -M 6777 -NR '*:6766:b.localhost:22' usera@a.site -i /home/autossh/.ssh/id_rsa
 ExecReload=/bin/kill -HUP $MAINPID
 KillMode=process
 Restart=always
